--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_bloc: ^8.1.2
   dio: ^5.0.0
   conditional_builder_null_safety: ^0.0.6
+  hexcolor: ^3.0.1
 
 dev_dependencies:
   flutter_test:
