--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   dio: ^5.0.0
   conditional_builder_null_safety: ^0.0.6
   hexcolor: ^3.0.1
+  shared_preferences: ^2.0.17
 
 dev_dependencies:
   flutter_test:
