--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,13 @@ dependencies:
   cupertino_icons: ^1.0.5
   bloc: ^8.1.1
   flutter_bloc: ^8.1.2
-  dio: ^5.0.0
+  dio: ^5.0.1
   conditional_builder_null_safety: ^0.0.6
   hexcolor: ^3.0.1
-  shared_preferences: ^2.0.17
+  shared_preferences: ^2.0.18
+  webview_flutter: ^4.0.5
+  webview_flutter_android: ^3.3.1
+  webview_flutter_wkwebview: ^3.1.1
 
 dev_dependencies:
   flutter_test:
